# bazel_clang

./: .gitignore  MODULE.bazel  README.md  registry.bzl  rules.bzl
.github/workflows/: clang.yml
Examples/: .bazelrc  MODULE.bazel
templates/: BUILD.bazel.tpl  BUILD.compiler.bazel.tpl
