""

# buildifier: disable=module-docstring
module(
    name = "bazel_llvm_clang_examples",
    version = "0.1",
)

bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "platforms", version = "0.0.10")

git_override(module_name="bazel_utilities", remote="https://github.com/0-Sacha/bazel_utilities.git", commit="fbb17685ac9ba78fef914a322e6c37839dc16d4f")

# Replace with git_override from my repo `https://github.com/0-Sacha/bazel_llvm_clang.git`
local_path_override(module_name = "bazel_llvm_clang", path = "../")

bazel_dep(name = "bazel_utilities", version = "0.0.1", dev_dependency = True)
bazel_dep(name = "bazel_llvm_clang", version = "0.0.1", dev_dependency = True)

llvm_clang_toolchain_extension = use_extension("@bazel_llvm_clang//:rules.bzl", "llvm_clang_toolchain_extension", dev_dependency = True)
inject_repo(llvm_clang_toolchain_extension, "platforms", "bazel_utilities")
llvm_clang_toolchain_extension.llvm_clang_toolchain(name = "myclang")
use_repo(llvm_clang_toolchain_extension, "myclang")
# register_toolchains("@myclang//:toolchain")
